# c-

./: Help_install_alien.md  TD1_cmake.md  TD2_create_project.md  TD2_intro_to_read_first.md
meTD1/: CMakeLists.txt  main.cpp
meTD1/my_lib/: CMakeLists.txt  MyClass.h
meTD2/: AlienMock.h  CMakeCache (copy 1).txt  CMakeCache.txt  CMakeLists (copy 1).txt  CMakeLists.txt  CTestTestfile (copy 1).cmake  CTestTestfile.cmake  GenericExample (copy 1).cpp  GenericExample.cpp  GenericExample.h  HyperExample (copy 1).h  LocalLinearAlgebra (copy 1).h  LocalLinearAlgebra.cpp  LocalLinearAlgebra.h  Makefile  Makefile (copy 1)  PETScExample.cpp  PetscExample (copy 1).h  PetscExample.h  Test (copy 1).cpp  Test.cpp  Test.exe[1]_include (copy 1).cmake  Test.exe[1]_include.cmake  Test.exe[1]_tests.cmake  cmake_install.cmake  main (copy 1).cpp  main.cpp
meTD2/dolular/: HyperExample.cpp  HyperExample.h  LocalLinearAlgebra (copy 1).h  LocalLinearAlgebra (copy 2).h  LocalLinearAlgebra.cpp  LocalLinearAlgebra.h  main.cpp
meTD2/github/: CMakeLists.txt  HyperExample.cpp  PETScExample.cpp  Test.cpp  main.cpp
